# Just-some-image-features

./: .gitignore  README.md  README.md~  train.txt
experiments/cfgs/: lov_features.yml  sintel_albedo.yml  sintel_clean.yml
experiments/scripts/: lov_features.sh  lov_features_synthetic.sh  lov_features_synthetic.sh~  lov_features_synthetic_60.sh  lov_features_synthetic_60.sh~  lov_features_synthetic_60_EPE.sh  lov_features_synthetic_90.sh  lov_features_synthetic_90.sh~  lov_features_synthetic_restart.sh  lov_features_test.sh  sintel_albedo.sh  sintel_albedo_test.sh  sintel_clean.sh  sintel_clean_test.sh
lib/: make.sh
lib/datasets/: __init__.py  factory.py  lov.py  lov_synthetic.py  sintel_albedo.py  sintel_clean.py
lib/fcn/: config.py  test.py  train.py  voxelize.py
lib/gt_flow_data_layer/: layer.py  minibatch.py
lib/gt_lov_correspondence_layer/: build_cython.sh  layer.py  minibatch.c  minibatch.html  minibatch.pyx
lib/gt_lov_synthetic_layer/: layer.py  (+5 more)
lib/triplet_flow_loss/: CMakeLists.txt  __init__.py  build_cython.sh  cuda_sample_printf.cu  make.sh  make_old.sh  make_with_cuda.sh  run_slow_flow_calculator_process.py  setup.py  slow_flow_calculator_cython.c  slow_flow_calculator_cython.html  slow_flow_calculator_cython.pyx  slow_flow_calculator_cython.so_back  triplet_flow_loss_op.cc  triplet_flow_loss_op.cc.back  triplet_flow_loss_op.cc~  triplet_flow_loss_op.py  triplet_flow_loss_op_gpu.cu.cc  triplet_flow_loss_op_gpu.h  triplet_flow_loss_op_grad.py
tools/: generate_feature_voxels.py  start_test_triplet_flow_loss.py  test_net.py  train_net.py
(+40 files in other folders)
